--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
 </head>
 <body>
     <h1 class="text-xl font-bold underline text-center bg-gray-700">Welcome to my site</h1>
+    <div class="columns-2">
+      <h2>This is h2</h2>
+      <div class="columns-2 bg-gray-700">
+        <h2>Another h2</h2>
+      </div>
+    </div>
 </body>
 </html>
