--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <h2>This is h2</h2>
       <div class="columns-2 bg-gray-700">
         <h2>Another h2</h2>
+        <h1>This is na</h1>
       </div>
     </div>
 </body>
