--- a/index.html
+++ b/index.html
@@ -3,25 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Orbitron:wght@400..900&family=Rajdhani:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-<style type="text/tailwindcss">
-    @theme {
-      --color-clifford: #da373d;
-    }
-  </style>
     <title>Daniel Zadva Jnr | Frontend Developer</title>
 </head>
-<body>
-    <h1 class="text-xl font-bold underline text-center bg-gray-700">Welcome to my site</h1>
-    <div class="columns-2">
-      <h2>This is h2</h2>
-      <div class="columns-2 bg-gray-700">
-        <h2>Another h2</h2>
-        <h1>This is na</h1>
-      </div>
-    </div>
+<body class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white h-screen flex items-center justify-center">
+  <div class="text-center p-8 bg-white/10 backdrop-blur-md rounded-2xl shadow-2xl">
+    <img src="./images/profile.jpg" alt="Zadva's Profile Picture" class="w-32 h-32 rounded-full mx-auto border-4 border-white shadow-md">
+    <h1 class="text-3xl font font-bold mt-4">DANIEL ZADVA JNR</h1>
+    <p>I’m a Python backend developer learning FastAPI, Django, and building APIs.<br />
+      I love coding, reading, and tech tutorials. 💻📚⚙️</p>
+  </div>
 </body>
 </html>
