--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Daniel Zadva Jnr | Frontend Developer</title>
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white h-screen flex items-center justify-center">
   <div class="text-center p-8 bg-white/10 backdrop-blur-md rounded-2xl shadow-2xl">
